HETS-263 additional fields for the attachment view model
